--- a/index.html
+++ b/index.html
@@ -7,54 +7,92 @@
     <meta name="description" content="This is the profile of Sarah">
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha383-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4=0awXq79v+lsFkW54b0GbiDQ" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"> 
   </head>
   <body>
-
-<div class="container">
+ <div class="container"> 
     <div   class="card-white" id="introduction">
-     <h1>Hello, I'm Sarah</h1>
+     <h1>Hello, I'm Sarah 😄</h1>
      <img src="images/profile.jpg" class="img-circle" width="100px" alt="Sarah Dufétel">
       <p>
-     	I love github, UX/UI design, web-developpement and motorbikes. I launched Le Wagon to teach code to entrepeneurs and creative people around the world. I study at EMLV Business School. I 
+     	I am 18 years old, I'm studing in EMLV buisness school. 
       </p>
      <a href="#" class="btn-blue">Discover EMLV</a>
     </div>
     <div class="card-white">	
-      <h2>Family</h2>
-        <p>
-     	 I have abig family, and I love take times with them, and create memories.
-       </p>
+      <h2>Formation 🎓</h2>
+        <ul class="list-qualities">
+         <li>-2021: soft skills formation tothe organization of the work team and collective work methods</li>
+     	 <li>-2020: Baccalaureate ES series, Mathematics specialty, Suger, Vaucresson. Admitted with honors.</li>
+        </ul>
     </div>
     <div class="card-white">	
-      <h2>Netflix</h2>
-        <p>
-     	 I love discover new TV shows and new movies. and Netflix is a good web for that.
-        </p>
+      <h2>Experience/Project📚</h2>
+        <ul class="list-qualities">
+         <li>-humanitarian association</li>
+     	 <li>-internship in a speech therapist practice</li>
+     	 <li>-Florist help for weddings</li>
+     	 <li>-Babysitting</li>
+        </ul>
     </div>
     <div class="card-white">	
-      <h2>Travel the world</h2>
-       <p>
-     	One of my big dream it's to travel the world and dicover new coutries, new culture, and new peoples.
-       </p>
+      <h2>IT and languages📝</h2>
+       <ul class="list-qualities">
+       	<li>-mastery of office suites</li>
+     	<li>-English: 16 in the baccalaureate, American student exchange</li>
+     	<li>-Spanish:16 in the baccalaureate</li>
+     	<li>-TOEFL in progress</li>
+       </ul>
+    </div>
+    <div class="card-white">
+      <h2>Travel 🛫</h2>
+    	 <ul class="list-qualities">
+    	  <li>-Czech republic</li>	
+    	  <li>-Portugal</li>
+    	  <li>-United States</li>
+    	  <li>-England</li>
+    	 </ul>
+    </div>
+    <div class="card-white">
+    	<h2>Center of interest 🎬</h2>
+    	<ul class="list-qualities">
+         <li>-Cinema</li>
+         <li>-Dance</li>
+    	   <li>-figure skating</li>
+         <li>-video montage</li>
+    	</ul>
+    </div>
+    <div class="card-white">
+     <h2>Qualities 😉</h2>	
+      <ul class="list-qualities">
+      	<li>Patience</li>
+        <li>Punctual</li>
+        <li>Likes to work in a team</li> 	
+      </ul>	
     </div>
     <div class="card-white">
      <h2>Follow me</h2>
       <ul class="list-inline">
      	<li>
      	 <a href="https://www.facebook.com/sarah.dufetel/" target="_blank">
-     		<i class="fab fa-facebook"></i> 
+     		<i class="fab fa-facebook"></i>
      	 </a>
      	</li>
      	<li>
      	 <a href="https://www.instagram.com/sarah.dft/?hl=fr" target="_blank">
      		<i class="fab fa-instagram"></i>
      	 </a>
-     	</li>
+      </ul>
+       <ul class=" list-inline">
+      <li>
+      <a href="mailto:%73ar%61h.d&#117;&#102;ete%6c&#64;&#104;&#111;&#116;m%61%69%6c&#46;f&#114;%2e%46&#114;%61%6e%63&#101;">
+        <i class="fas fa-address-card"></i>
+      </a>
+      </li>
        </ul>	
-    </div>
-</div>
 
+    </div>
+ </div>
   	
   </body>
 
