--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       </ul>
        <ul class=" list-inline">
       <li>
-      <a href="mailto:%73ar%61h.d&#117;&#102;ete%6c&#64;&#104;&#111;&#116;m%61%69%6c&#46;f&#114;%2e%46&#114;%61%6e%63&#101;">
+      <a href="mailto:%73ar%61h.d&#117;&#102;ete%6c&#64;&#104;&#111;&#116;m%61%69%6c&#46;f&#114;">
         <i class="fas fa-address-card"></i>
       </a>
       </li>
