--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  <div class="container"> 
     <div   class="card-white" id="introduction">
      <h1>Hello,I'm Sarah 😄</h1>
-     <img src="images/profile.jpg" class="img-circle" width="100px" alt="Sarah Dufétel">
+     <img src="images/image.jpg" class="img-circle" width="100px" alt="Sarah Dufétel">
       <p>
      	I am 18 years old, I'm studing in EMLV buisness school. 
       </p>
